# subfv

./: .gitignore  CMakeLists.txt  README.md
test/: CMakeLists.txt  gen_sum_pdf.sh  schemes.txt
test/convergence_gresho_quad/: CMakeLists.txt  input.template  run.sh
test/convergence_gresho_tri/: CMakeLists.txt  gresho_tri.geo  input.template  plot_convergence.gnu  run.sh  visu.sh
test/double_mach_quad/: CMakeLists.txt  double_mach_quad.geo  input.template  run.sh  visualize_fields.py
test/forward_facing_quad/: CMakeLists.txt  forward_facing_quad.geo  input.template  run.sh  visualize_fields.py
test/gresho_quad/: CMakeLists.txt  gresho_quad.geo  input.template  plot_gresho.gnu  plot_residual.gnu  run.sh  run_periodic.sh  visu.sh  visualize_fields.py
test/gresho_summary/: CMakeLists.txt  combine.sh  summary.sh
test/gresho_tri/: CMakeLists.txt  extract_velocity_profile.py  gresho_tri.geo  input.template  plot_gresho.gnu  run.sh  visualize_fields.py
test/half_cylinder/: CMakeLists.txt
test/half_cylinder/half_cylinder_quad_euler/: CMakeLists.txt  plot_coeffs.gnu  plot_line.gnu.test  plot_line_o2_5.gnu  run.sh  visualize_fields.py
test/half_cylinder/half_cylinder_quad_ns/: CMakeLists.txt  fun3D_cp.tsv  fun3D_st2.tsv  half_cylinder_quad_ns.geo  visu.sh
test/half_cylinder/half_cylinder_tri_euler/: CMakeLists.txt  half_cylinder_tri_euler.geo  plot_line_o2_2.gnu  plot_line_o2_3.gnu  plot_line_o2_5.gnu  run.sh
test/half_cylinder_quad_euler/: CMakeLists.txt  half_cylinder_quad_euler.geo  input.template  plot_line_o2_3.gnu  plot_line_o2_4.gnu  run.sh  temperature_comparison.tex  temperature_comparison_o2_2.tex  temperature_comparison_o2_4.tex
test/half_cylinder_quad_ns/: CMakeLists.txt  fun3D_cp.csv  fun3D_st.tsv  input.template  plot_coeffs.gnu  plot_coeffs_o2_2.gnu  plot_coeffs_o2_4.gnu  plot_individual.sh  plot_line.gnu  plot_line_o2_2.gnu  plot_line_o2_4.gnu  run.sh  temperature_comparison.tex  temperature_comparison_o2_2.tex  temperature_comparison_o2_4.tex
test/half_cylinder_tri_euler/: CMakeLists.txt  input.template  plot_line.gnu  run.sh  temperature_comparison.tex  temperature_comparison_o2_2.tex  temperature_comparison_o2_4.tex  visu.sh
test/half_cylinder_tri_ns/: CMakeLists.txt  plot_coeffs.gnu  plot_line.gnu  plot_line_o2_2.gnu  run.sh  visualize_fields.py
test/kelvin_helmholtz_quad/: CMakeLists.txt  input.template  kelvin_helmholtz_quad.geo  run.sh  visu.sh  visualize_fields.py
test/low_mach/: CMakeLists.txt
test/potential_flow_2d/: CMakeLists.txt  input.template  plot_residual.gnu  run.sh  visu.sh  visualize_fields.py
test/potential_flow_2d_quad/: CMakeLists.txt  potential_flow_2d_quad.geo  run.sh
test/potential_flow_3d/: CMakeLists.txt  input.template  run.sh  sphere_radial.geo
test/riemann_1d_test_1/: CMakeLists.txt  plot_line.gnu  run.sh
test/riemann_1d_test_2/: 1drp.geo  CMakeLists.txt  input.template  plot_all_schemes.sh  plot_line.gnu
test/riemann_1d_test_6/: CMakeLists.txt  input.template
test/riemann_1d_test_6_wall/: CMakeLists.txt  input.template  run.sh
test/riemann_problem_1d/: CMakeLists.txt
test/scaling_mpi/: CMakeLists.txt  input_data.f  run.sh  script.sh
test/sedov/: CMakeLists.txt
test/sedov_hex/: CMakeLists.txt  input.template  input_data.f  run.sh  spherical_sedov_hex.geo  visu.sh  visualize_fields.py
test/sedov_tet/: CMakeLists.txt  plot_sedov.gnu  run.sh
test/sedov_tri/: CMakeLists.txt  input.template  plot_sedov.gnu  run.sh  sedov_tri.geo  visualize_fields.py
test/shear/: CMakeLists.txt
test/test_error_heat_flux_hybrid/: CMakeLists.txt  blsize.txt  collect_errors.sh  collect_residuals.sh  comparison.run.xml  comparison.tex  compute_error.py  extract_coeffs.py  fsize.txt  gen_comparison.sh  half_cylinder_tri_ns_error_heat.geo  input.template  plot_case.gnu  plot_errors.gnu  run.sh  run_case.sh  run_corners.sh  schemes.txt  submit_cluster.sh  submit_cluster_array.sh  submit_cluster_array_curta.sh  submit_cluster_curta.sh  visu.sh  visu_corners.py
test/test_shear/: CMakeLists.txt  compile_shear.sh  mesh_shear_1.geo  mesh_shear_2.geo  mesh_shear_8.geo  run.sh
(+85 files in other folders)
