add_subdirectory(riemann_1d_test_1)
add_subdirectory(riemann_1d_test_2)
add_subdirectory(riemann_1d_test_6)
add_subdirectory(riemann_1d_test_6_wall)
add_subdirectory(sedov_tri)
add_subdirectory(sedov_hex)
add_subdirectory(sedov_tet)
add_subdirectory(half_cylinder_quad_euler)
add_subdirectory(half_cylinder_tri_euler)
add_subdirectory(half_cylinder_quad_ns)
add_subdirectory(half_cylinder_tri_ns)
add_subdirectory(test_shear)
add_subdirectory(potential_flow_2d)
add_subdirectory(potential_flow_2d_quad)
add_subdirectory(potential_flow_3d)
add_subdirectory(kelvin_helmholtz_quad)
add_subdirectory(gresho_quad)
add_subdirectory(gresho_tri)
add_subdirectory(convergence_gresho_quad)
add_subdirectory(convergence_gresho_tri)
add_subdirectory(gresho_summary)
add_subdirectory(double_mach_quad)
add_subdirectory(forward_facing_quad)
add_subdirectory(scaling_mpi)
